# dectalk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  pages.yml
debian/: changelog  control
etc/: DECtalk.conf.in
src/: Makefile.in  configure.ac
src/dapi/src/cmd/: cm_copt.c
src/dapi/src/lts/: l_fr_ru1.c  ls_data.h  lsw_main.c
src/dapi/src/nt/: linux_audio.c  linux_audio.h
src/dtalkml/src/: dtalk_ml.c
src/licunix/src/: csn.c
src/nvda/: manifest.ini
src/nvda/synthDrivers/: dectalk.py
src/samplosf/src/dtsamples/: dtmemory.c  say.c
src/samplosf/src/speak/: gspeak.c
src/samplosf/src/windict/: compile_dict.c  windic.c
src/udicunix/src/: udic_com.h
