cmake_minimum_required(VERSION 3.13)
project(dectalk CXX)
include(GNUInstallDirs)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build)
set(SRCDIR .)
set(ORIG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(TARGET_ROOT_DIR "dist")
set(TARGET_BUILD_DIR ${TARGET_ROOT_DIR}/opt/dectalk)
set(TARGET_DOC_DIR ${TARGET_BUILD_DIR}/doc/DECtalk)
set(TARGET_LIB_DIR ${TARGET_BUILD_DIR}/lib)
set(TARGET_CONF_DIR dectalk)

set(TARGET_FULL_DATA_DIR ${CMAKE_INSTALL_FULL_DATADIR}/dectalk)

set(LICENSE_KEY "YV808w008IQ0")
set(LICENSE_PASSWORD "kw60P7Y0bGRNB1@W3L@")

find_package(PkgConfig)
pkg_check_modules(ALSA REQUIRED alsa)
pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
pkg_check_modules(LIBPULSE REQUIRED libpulse)

include(ExternalProject)
ExternalProject_Add(
  dectalk-orig
  PREFIX ${CMAKE_BINARY_DIR}
  SOURCE_DIR ${ORIG_DIR}
  CONFIGURE_COMMAND ./autogen.sh
  COMMAND ./configure

  BUILD_IN_SOURCE 1
  BUILD_COMMAND cd ${ORIG_DIR}
  COMMAND ${MAKE}

  INSTALL_COMMAND make install DESTDIR=${CMAKE_CURRENT_BINARY_DIR}/${TARGET_ROOT_DIR}
  COMMAND mv ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/say ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/dtk-say
)

install(DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/include/dtk
  TYPE INCLUDE
)

#
# configuration file
#

set(TARGET_FULL_DATA_DIR )

configure_file(etc/DECtalk.conf.in
  ${CMAKE_CURRENT_BINARY_DIR}/dectalk/DECtalk.conf
)

install(DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_CONF_DIR}
  TYPE SYSCONF
)

#
# doc
#

install(DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DOC_DIR}/man/man1
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DOC_DIR}/man/man3
  TYPE MAN
)

#
# data
#

install(DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/bitmaps
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/dic
  DESTINATION ${CMAKE_INSTALL_DATADIR}/dectalk
)

#
# lib
#

set(LIB_FILES
  tts
  tts_fr
  tts_gr
  tts_la
  tts_sp
  tts_uk
  tts_us
)

list(TRANSFORM
  LIB_FILES
  PREPEND ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_LIB_DIR}/lib
)

list(TRANSFORM
  LIB_FILES
  APPEND .so
)

install(FILES
  ${LIB_FILES}
  TYPE LIB
)

#
# bin
#

configure_file(bin/say.in
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/say
)

install(FILES
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/aclock
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/dtk-say
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/dtmemory
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/gspeak
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/say
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BUILD_DIR}/windic
  TYPE BIN
)
